--- a/SoapWS/pom.xml
+++ b/SoapWS/pom.xml
@@ -15,11 +15,72 @@
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-ri -->
+	<dependency>
+	    <groupId>com.sun.xml.ws</groupId>
+	    <artifactId>jaxws-ri</artifactId>
+	    <version>2.3.0.1</version>
+	    <type>pom</type>
+	</dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.1.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.axis/axis -->
+	<dependency>
+	    <groupId>org.apache.axis</groupId>
+	    <artifactId>axis</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	
+		<!-- https://mvnrepository.com/artifact/commons-discovery/commons-discovery -->
+	<dependency>
+	    <groupId>commons-discovery</groupId>
+	    <artifactId>commons-discovery</artifactId>
+	    <version>0.5</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+	<dependency>
+	    <groupId>commons-logging</groupId>
+	    <artifactId>commons-logging</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/axis/axis-jaxrpc -->
+	<dependency>
+	    <groupId>axis</groupId>
+	    <artifactId>axis-jaxrpc</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.xml.soap/saaj-api -->
+	<dependency>
+	    <groupId>javax.xml.soap</groupId>
+	    <artifactId>saaj-api</artifactId>
+	    <version>1.3.5</version>
+	</dependency>
+
+    <!-- https://mvnrepository.com/artifact/wsdl4j/wsdl4j -->
+	<dependency>
+	    <groupId>wsdl4j</groupId>
+	    <artifactId>wsdl4j</artifactId>
+	    <version>1.6.3</version>
+	</dependency>
+	    
   </dependencies>
+
 </project>
